# genshin_loader

./: .gitmodules  CMakeLists.txt  config.cfg  config.cpp  config.hpp  config.json  main.cc  main.cpp  main_window.cpp  main_window.hpp  vcpkg.json
